injection/logs/8209501.err
  File "/panfs/roc/groups/7/cough052/barna314/nmma_fitter/injection/injectionScript.py", line 87
    File perms = [
             ^
SyntaxError: invalid syntax
slurmstepd: error: *** JOB 8209501 ON cn0373 CANCELLED AT 2021-11-10T13:48:35 ***
